RESOLVED FIXED56078
[WML] Fix build error
https://bugs.webkit.org/show_bug.cgi?id=56078
Summary [WML] Fix build error
Gyuyoung Kim
Reported 2011-03-09 23:21:07 PST
/home/gyuyoung/webkit/working-source/WebKit-wml/Source/WebCore/wml/WMLInputElement.cpp: In member function ‘virtual void WebCore::WMLInputElement::defaultEventHandler(WebCore::Event*)’: /home/gyuyoung/webkit/working-source/WebKit-wml/Source/WebCore/wml/WMLInputElement.cpp:310: error: ‘wasChangedSinceLastChangeEvent’ was not declared in this scope /home/gyuyoung/webkit/working-source/WebKit-wml/Source/WebCore/wml/WMLInputElement.cpp:311: error: ‘setChangedSinceLastChangeEvent’ was not declared in this scope [ 78%] Building CXX object WebCore/CMakeFiles/webcore_efl.dir/wml/WMLMetaElement.cpp.o [ 78%] Building CXX object WebCore/CMakeFiles/webcore_efl.dir/wml/WMLNoopElement.cpp.o
Attachments
Patch (1.19 KB, patch)
2011-03-09 23:22 PST, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2011-03-09 23:22:50 PST
WebKit Commit Bot
Comment 2 2011-03-10 21:49:45 PST
Comment on attachment 85287 [details] Patch Clearing flags on attachment: 85287 Committed r80815: <http://trac.webkit.org/changeset/80815>
WebKit Commit Bot
Comment 3 2011-03-10 21:49:49 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.