2011-03-10  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

Unreviewed build fix.

        [WML] Fix build error
        https://bugs.webkit.org/show_bug.cgi?id=56078

        * wml/WMLInputElement.cpp:
        (WebCore::WMLInputElement::defaultEventHandler):

Canonical link: https://commits.webkit.org/70701@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80815 268f45cc-cd09-0410-ab3c-d52691b4dbfc